faq menu off-screen fix

--- a/public/css/body.css
+++ b/public/css/body.css
@@ -66,5 +66,9 @@ body p, li {
 }
 
 .odd-tr {
-    background-color: whitesmoke;
+    background: linear-gradient(whitesmoke, lightgray);
+}
+
+.even-tr {
+    background: linear-gradient(#C0C0C0, lightgray);
 }
