--- a/public/css/header.css
+++ b/public/css/header.css
@@ -49,8 +49,6 @@ ul.nav.navbar-nav li {
     background: url("/../img/logos/viscoplus_logo.png") no-repeat;
     display: block;
     margin-top: 10px;
-    margin-left: 15px;
-    margin-right: 15px;
     background-size: 200px 30px;
     width: 200px;
     height: 30px;
