--- a/public/css/media.css
+++ b/public/css/media.css
@@ -4,6 +4,7 @@
         text-align: center;
     }
 
+    /* Mouseover highlight */
     .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover {
         border-bottom: solid thin royalblue;
         color: royalblue !important;
@@ -14,11 +15,12 @@
         background-color: #222;
     }
 
+    /* Focus color from black to less black */
     .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {
         background-color: #222;
     }
 
-    /* Language div */
+    /* Language div styling */
     ul.nav.navbar-nav.nav.navbar-right {
         display: flex;
         -webkit-justify-content: center; /* Safari */
@@ -27,11 +29,25 @@
     }
 }
 
+/* Navbar dropdown mouseover */
 @media (min-width: 768px) {
-    /* Navbar dropdown mouseover */
     ul.nav li.dropdown:hover > ul.dropdown-menu {
         display: block;
         text-align: center;
         background-color: #222;
+    }
+}
+
+/* Header FAQ dropdown off-screen fix */
+@media (min-width: 820px) and (max-width: 1000px){
+    #faq-menu {
+        margin-left: -100px;
+    }
+}
+
+/* Header FAQ dropdown off-screen fix */
+@media (min-width: 769px) and (max-width: 819px){
+    #faq-menu {
+        margin-left: -150px;
     }
 }
